fix some mobile display bug on IOS

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -109,6 +109,8 @@ ol.breadcrumb {
         padding-left: 10px;
         outline: none;
         color: #a6a6a6;
+        border-radius: 0;
+        font-size: 16px;
       }
     }
   }
